--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tests.velka.rxjavatest">
+          package="tests.velka.rxjavatest">
 
     <application
         android:allowBackup="true"
@@ -10,10 +10,12 @@
         android:theme="@style/AppTheme">
         <activity android:name=".views.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".views.MenuActivity">
         </activity>
     </application>
 
